--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,6 +1,8 @@
 {
   "extends": "stylelint-config-standard-scss",
   "rules":{
-    "selector-class-pattern": null
+    "selector-class-pattern": null,
+    "scss/dollar-variable-pattern": null,
+    "scss/at-mixin-pattern": null
   }
 }
