--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.3",
-    "@types/react-virtualized": "^9.21.22",
     "@types/webpack": "^5.28.0",
     "@types/webpack-bundle-analyzer": "^4.6.0",
     "@types/webpack-dev-server": "^4.7.2",
@@ -75,14 +74,14 @@
     "json-server": "^0.17.3",
     "loki": "^0.32.0",
     "mini-css-extract-plugin": "^2.7.6",
+    "msw": "^1.3.0",
     "react-redux": "^8.1.2",
     "react-refresh": "^0.14.0",
-    "react-virtualized": "^9.22.5",
     "reg-cli": "^0.17.7",
     "regenerator-runtime": "^0.13.11",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
-    "storybook": "^7.2.1",
+    "storybook": "^7.4.0",
     "style-loader": "^3.3.1",
     "stylelint": "^14.5.3",
     "stylelint-config-standard-scss": "^3.0.0",
@@ -105,11 +104,6 @@
     "react-dom": "^17.0.2",
     "react-i18next": "^13.0.3",
     "react-router-dom": "^6.2.1"
-  },
-  "peerDependencies": {
-    "@storybook/react": "^7.2.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
   },
   "overrides": {
     "loki": {
